# vewd

./: README.md  __init__.py  image-viewer.html  nodes.py  pyproject.toml  vewd.sh  viewer.bat  viewer.py
.github/workflows/: publish.yml
comfy_node/: __init__.py  vewd_node.py
web/: splat-viewer.html  vewd.js
